--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "dependencies": {
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "git": "^0.1.5",
     "lodash": "^4.17.21",
     "nodemon": "^2.0.7"
   },
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon app.js"
   },
   "name": "nodejs",
   "version": "1.0.0",
