--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "express": "^4.17.1",
     "git": "^0.1.5",
     "lodash": "^4.17.21",
+    "mongoose": "^5.12.5",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7"
   },
