--- a/package.json
+++ b/package.json
@@ -4,12 +4,20 @@
     "express": "^4.17.1",
     "git": "^0.1.5",
     "lodash": "^4.17.21",
+    "mongodb-memory-server": "^6.9.6",
     "mongoose": "^5.12.5",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7"
   },
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon index.js",
+    "test": "jest --watchAll --no-cache"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": [
+      "./test/setup.js"
+    ]
   },
   "name": "nodejs",
   "version": "1.0.0",
@@ -18,6 +26,11 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "eslint": "^7.24.0"
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "eslint": "^7.24.0",
+    "jest": "^26.6.3",
+    "superagent": "^6.1.0",
+    "supertest": "^6.1.3"
   }
 }
